# vglite_vulkan

./: .gitignore  CMakeLists.txt  README.md
android/: .project  gradlew  settings.gradle
android/.sisyphus/evidence/: android-build.txt
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  main_android.cpp
android/app/src/main/java/com/example/vglite/: MainActivity.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
include/: vg_lite.h
src/: main.c  main_linux.c  main_windows.c  vg_lite.c  vulkan_buffer.c  vulkan_buffer.h  vulkan_context.c  vulkan_context.h
